argocd/homarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr-svc
  namespace: media
spec:
  selector:
    app: homarr
  ports:
    - name: http
      port: 7575
      targetPort: 7575
